--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <header>
         <div class="card header-card">
-            <img src="images/darif_profile.jpg" alt="Profile picture of darif younes" class="profile-picture">
+            <img src="darif_profile.jpg" alt="Profile picture of darif younes" class="profile-picture">
             <h1>DARIF Younes</h1>
             <p>Marseille, Provence-Alpes-Côte d'Azur, France</p>
-            <img src="images/kedge_logo.png" alt="KEDGE Business School logo" class="school-logo">
+            <img src="kedge_logo.png" alt="KEDGE Business School logo" class="school-logo">
         </div>
     </header>
 
@@ -26,8 +26,8 @@
             <h2>Fishing</h2>
             <p>One of my favorite hobbies is fishing, my adrenaline dealer.</p>
             <div class="photo-gallery">
-                <img src="images/fishing_two.jpg" alt="Fishing photo 1" class="photo">
-                <img src="images/fishing_spot.jpg" alt="Fishing photo 2" class="photo">
+                <img src="fishing_two.jpg" alt="Fishing photo 1" class="photo">
+                <img src="fishing_spot.jpg" alt="Fishing photo 2" class="photo">
             </div>
         </div>
 
@@ -35,8 +35,8 @@
             <h2>Camping</h2>
             <p>Love to share my days with nature.</p>
             <div class="photo-gallery">
-                <img src="images/camping photo.jpg" alt="Camping trip view" class="photo">
-                <img src="images/view.jpg" alt="Clear water view during camping" class="photo">
+                <img src="camping photo.jpg" alt="Camping trip view" class="photo">
+                <img src="view.jpg" alt="Clear water view during camping" class="photo">
             </div>
         </div>
 
@@ -48,9 +48,9 @@
 
     <footer>
         <div class="social-media">
-            <a href="https://www.facebook.com/younes.darif.31" aria-label="Facebook profile"><img src="images/facebook-logo-icon-transparent-background-free-png.png" alt="Facebook icon"></a>
-            <a href="https://twitter.com" aria-label="Twitter profile"><img src="images/x-logo-png-twitter-0.jpg" alt="Twitter icon"></a>
-            <a href="https://www.instagram.com/darif__younes/" aria-label="Instagram profile"><img src="images/Instagram_icon.png" alt="Instagram icon"></a>
+            <a href="https://www.facebook.com/younes.darif.31" aria-label="Facebook profile"><img src="facebook-logo-icon-transparent-background-free-png.png" alt="Facebook icon"></a>
+            <a href="https://twitter.com" aria-label="Twitter profile"><img src="x-logo-png-twitter-0.jpg" alt="Twitter icon"></a>
+            <a href="https://www.instagram.com/darif__younes/" aria-label="Instagram profile"><img src="instagram_icon.png" alt="Instagram icon"></a>
         </div>
         <p>This website was created by me, <strong>DARIF Younes</strong>.</p>
     </footer>
